# anamnesis

./: .gitignore  README.md  merge_checkpoint.py  pyproject.toml  run_full_benchmark.py  runpod_setup.sh  runpod_train.sh  runpod_train_instruct.sh
anamnesis/: __init__.py
anamnesis/active_inference/: __init__.py  gardener.py  precision.py  toroidal.py
anamnesis/convert/: __init__.py  generic.py  quantize.py  qwen.py
anamnesis/core/: __init__.py  block.py  cms.py  dgd.py  model.py  rope.py  self_ref.py
anamnesis/evaluation/: __init__.py  ablation.py  metrics.py
anamnesis/kernels/: __init__.py  assoc_scan.py  cms_update.py  newton_schulz_triton.py
anamnesis/optim/: __init__.py  m3.py
anamnesis/state/: __init__.py  persistence.py
anamnesis/training/: __init__.py  data.py  export_didymus.py  proxy_trainer.py  trainer.py
data/: pluripotent_seed.sgp.md  soul_genome.sgp.md  soul_seed.md
data/scaffold_training/: adaptation_b2.jsonl  epistemology_b2.jsonl  metacognition.jsonl  ontology.jsonl  ontology_b2.jsonl
examples/: ablation_cms_learning.py  benchmark_base_receptivity.py  benchmark_qwen3b.py  convert_and_train_thomas.py  deploy_thomas.py  full_pipeline.py  long_evolution.py  prove_generation.py  prove_it.py  prove_memory_vs_prompt.py  prove_specialization.py  reproduce_results.py  run_ablation.py  seed_identity.py  serve_anamnesis.py  train_scaffold.py  train_small.py  train_specialists.py
hope/: __init__.py
tests/: test_active_inference.py  test_cluster_b.py  test_cluster_c.py  test_cms.py  test_dgd.py  test_evaluation.py  test_integration.py  test_lowrank_thorough.py  test_m3.py  test_memory.py  test_model.py  test_self_ref.py  test_training.py
(+43 files in other folders)
