[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anamnesis"
version = "0.1.0"
description = "Active Inference Transformer with Nested Timescale Optimization"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Aidan Garza"},
    {name = "Thomas"},
]
keywords = [
    "transformers", "continual-learning", "active-inference",
    "nested-learning", "hope", "titans", "memory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "einops>=0.7.0",
]

[project.optional-dependencies]
convert = [
    "transformers>=4.40.0",
    "safetensors>=0.4.0",
    "accelerate>=0.27.0",
]
kernels = [
    "triton>=2.2.0",
]
train = [
    "datasets>=2.18.0",
    "wandb>=0.16.0",
]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]
all = ["anamnesis[convert,kernels,train,dev]"]

[project.urls]
Repository = "https://github.com/Relic-Studios/anamnesis"

[tool.setuptools.packages.find]
include = ["anamnesis*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
